PA_Education/TestMenifest/force-app/main/default/objects/Outsourcing__c/Outsourcing__c.object-meta.xml
<CustomObject>
    <description>외주이력 정보관리</description>
    <label>외주인력</label>
    <nameField>
        <displayFormat>O-{0000}</displayFormat>
        <label>외주인력 NO</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>