PA_Education/TestMenifest/force-app/main/default/objects/Outsourcing__c/fields/O_Age__c.field-meta.xml
<CustomField>
    <fullName>O_Age__c</fullName>
    <formula>(YEAR(TODAY()) - Value(O_Birth__c ))+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>나이</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>