PA_Education/TestMenifest/force-app/main/default/objects/Outsourcing__c/fields/O_Area__c.field-meta.xml
<CustomField>
    <fullName>O_Area__c</fullName>
    <description>가술분야</description>
    <label>해당분야</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Develop</fullName>
            </value>
            <value>
                <fullName>Migration</fullName>
            </value>
            <value>
                <fullName>BI(Tableau)</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>Heroku</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>