PA_Education/TestMenifest/force-app/main/default/objects/Outsourcing__c/fields/O_Birth__c.field-meta.xml
<CustomField>
    <fullName>O_Birth__c</fullName>
    <description>출생년도</description>
    <inlineHelpText>년도숫자 4자리 입력</inlineHelpText>
    <label>출생년도</label>
    <length>4</length>
    <type>Text</type>
</CustomField>