PA_Education/TestMenifest/force-app/main/default/objects/Outsourcing__c/fields/O_Company__c.field-meta.xml
<CustomField>
    <fullName>O_Company__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>외주 계약사</description>
    <inlineHelpText>계약사 정보</inlineHelpText>
    <label>외주계약사</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>외주인력</relationshipLabel>
    <relationshipName>O_Company_R</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>