PA_Education/TestMenifest/force-app/main/default/objects/Outsourcing__c/fields/O_Email__c.field-meta.xml
<CustomField>
    <fullName>O_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>