PA_Education/TestMenifest/force-app/main/default/objects/Outsourcing__c/fields/O_Name__c.field-meta.xml
<CustomField>
    <fullName>O_Name__c</fullName>
    <description>외주인력 이름</description>
    <label>이름</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>