PA_Education/TestMenifest/force-app/main/default/objects/Outsourcing__c/fields/O_Phone__c.field-meta.xml
<CustomField>
    <fullName>O_Phone__c</fullName>
    <label>전화번호</label>
    <type>Phone</type>
</CustomField>