PA_Education/TestMenifest/force-app/main/default/objects/Outsourcing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>O_TRAINING__c</columns>
    <columns>O_TRAINING_S__c</columns>
    <columns>O_TRAINING_E__c</columns>
    <columns>O_Age__c</columns>
    <columns>O_Company__c</columns>
    <columns>O_Name__c</columns>
    <columns>O_Phone__c</columns>
    <columns>O_Birth__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>O_Area__c</columns>
    <columns>O_Certification__c</columns>
    <columns>O_Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>